# ndk-pkg-prefab-example-libphonenumber

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp  app.h
app/src/main/java/com/fpliu/android/ndk/pkg/prefab/example/libphonenumber/: MainActivity.kt
app/src/main/res/layout/: main_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
